[AOT] [llvm] Let AOT kernel inherit CallableBase and use LaunchContextBuilder
ghstack-source-id: debd43318167c655c85c731829bf73b5d8f498fa
Pull Request resolved: https://github.com/taichi-dev/taichi/pull/7504

--- a/tests/cpp/cpptests.yaml
+++ b/tests/cpp/cpptests.yaml
@@ -11,6 +11,12 @@
   - test: LlvmAotTest.DX12Kernel
     script: aot/python_scripts/kernel_aot_test1.py
     args: --arch=dx12
+  - test: LlvmAotTest.CpuReturn
+    script: aot/python_scripts/kernel_return_aot_test_.py
+    args: --arch=cpu
+  - test: LlvmAotTest.CudaReturn
+    script: aot/python_scripts/kernel_return_aot_test_.py
+    args: --arch=cuda
   - test: LlvmAotTest.CpuField
     script: aot/python_scripts/field_aot_test_.py
     args: --arch=cpu
